master:
 - obspy.core:
   * Casting FDSN identifiers to strings upon setting in the stats dictionary
     (see #1997).

1.1.x:
 - obspy.core:
   * Fix pickling of traces with a sampling rate of 0 (see #1990)
 - obspy.io.seiscomp:
   * Fix inventory read when maxClockDrift is unset in SC3ML (see #1993)
 - obspy.io.stationxml
   * Allow writing of dates before 1900 also on Python 2 (see #2013, #2015).
   * Write the UTC time zone specifier to all times (see #2015).
 - obspy.signal:
   * Allow singular COUNT units in evalresp (see #2003, #2011).

1.1.0: (doi: 10.5281/zenodo.165135)
 - General:
   * Read support for Guralp Compressed Format (GCF) waveform data,
     obspy.io.gcf (see #1449)
   * Read support for Reftek 130 (rt130) waveform data,
     obspy.io.reftek (see #1433)
   * Add Nordic format (s-file) read/write (see #1517)
   * Read and write support for events in the SCARDEC catlogue format
     (see #1391).
   * Read support for IASPEI ISF ISM 1.0 Bulletin event data,
     (see #1946)
   * Write support for AH (Ad Hoc version 1) format (see #1754)
   * Client to access the Nominal Response Library (NRL) (see #1185).
   * `obspy.read_inventory()` can now read dataless SEED and RESP files
     (see #1185).
   * change version number scheme for scenarios when no official version number
     can be determined (see #1889 and #1916)
   * Support for the IRIS Federator and EIDAWS FDSNWS web routing services
     (see #1779 and #1919).
 - obspy.core:
   * UTCDateTime is now based on nanoseconds (long) instead of a unix
     timestamp in microseconds (float) - resulting in higher precision and
     support for years 1-9999 (see #1325)
   * Ensure that Trace.data is always C-contiguous in memory (see #1732)
   * Event/ResourceIdentifier is now object aware, meaning even if two
     objects share a resource_id the distinct objects will be returned with
     the get_referred_object method provided both are still in scope. If one